[package]
name = "bevy-pbr-include"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ChangeCaps/bevy-pbr-include"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "4fed2ee8589975bc8725a5044f00d410f5db6753"

[dev-dependencies]
bevy-shadows = { git = "https://github.com/ChangeCaps/bevy-shadows", branch = "main" }

[features]
default = []
shadows = []

[[example]]
name = "shadows"
path = "examples/shadows.rs"
required-features = ["shadows"]